python/testData/highlighting/fStringMissingRightBrace.py
f'{42}'
f'{42!r}'
f'{42!r:03}'
f'{42:03}'
f'{42!r:{y}.{z}}'
f'{<error descr="Empty expressions are not allowed inside f-strings"></error><error descr="'}' is expected"></error>'
f'{42:{<error descr="Empty expressions are not allowed inside f-strings"></error><error descr="'}' is expected"></error>'
f'{42!r:{<error descr="Empty expressions are not allowed inside f-strings"></error><error descr="'}' is expected"></error>'
f'{{'
f'{{{<error descr="Empty expressions are not allowed inside f-strings"></error><error descr="'}' is expected"></error>'